--- a/index.html
+++ b/index.html
@@ -29,8 +29,14 @@
   </div>
 
   <script type="text/javascript">
-    // create an array with nodes
 
+    // SOURCES:
+    // http://visjs.org/examples/network/edgeStyles/arrows.html
+    // http://visjs.org/docs/network/layout.html?keywords=improvedLayout#
+    // http://visjs.org/docs/network/physics.html#
+    // https://stackoverflow.com/questions/32403578/stop-vis-js-physics-after-nodes-load-but-allow-drag-able-nodes
+
+    // create an array with nodes
     var nodes = new vis.DataSet(pages);
 
     // create an array with edges
@@ -104,5 +110,4 @@
   </script>
 
 </body>
-
 </html>
