--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.js"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.css" rel="stylesheet" type="text/css">
 
-  <script type="text/javascript" src="pages_200.js"></script>
-  <script type="text/javascript" src="links_200.js"></script>
+  <script type="text/javascript" src="pages_1k.js"></script>
+  <script type="text/javascript" src="links_1k.js"></script>
 
   <style type="text/css">
     #mynetwork {
