--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+  <div id="loading-div" style="display: block;"><h1>Loading ...</h1></div>
   <div id="mynetwork">
     <div class="vis-network" tabindex="900"
       style="position: relative; overflow: hidden; touch-action: pan-y; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); width: 100%; height: 100%;">
@@ -105,6 +106,7 @@
 
     network.on("stabilizationIterationsDone", function () {
       network.setOptions({ physics: false });
+      document.getElementById("p2").style.display = "none";
     });
 
   </script>
