remove commented code

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
           blockShifting: true,
           edgeMinimization: true,
           parentCentralization: true,
-          direction: 'UD',        // UD, DU, LR, RL
-          sortMethod: 'hubsize'   // hubsize, directed
+          direction: 'UD',
+          sortMethod: 'hubsize'
         }
       },
       physics: {
@@ -76,29 +76,8 @@
         }
       },
       edges: {
-        // arrows: {
-        //   to: { enabled: false, scaleFactor: 1 },
-        //   middle: { enabled: false, scaleFactor: 1 },
-        //   from: { enabled: false, scaleFactor: 1 }
-        // },
-        // color: {
-        //   color: '#848484',
-        //   highlight: '#848484',
-        //   hover: '#848484',
-        // },
-        // font: {
-        //   color: '#343434',
-        //   size: 11, // px
-        //   face: 'arial',
-        //   background: 'none',
-        //   strokeWidth: 5, // px
-        //   strokeColor: '#ffffff',
-        //   align: 'vertical'
-        // },
         smooth: {
-          enabled: false, //setting to true enables curved lines
-          //type: "dynamic",
-          //roundness: 0.5
+          enabled: false,
         },
       }
     }
